# neural-network

./: LICENSE  README.md  pyproject.toml
notebooks/: neural-network.ipynb
