[tool.poetry]
name = "neural-networks"
version = "0.1.0"
description = "Very basic python implementation of neural networks."
authors = ["Arpit Chakladar <54011232+arpitchakladar@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "neural_networks"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.3"
mnist = "^0.2.2"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
